--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
